--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 			        background-position: 0% 50%;
 			    }
 			}
+			@media{
+			    max-width:700px;
+			}
 			.c {
 				text-align: right;
 				position: absolute;
