--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 			        background-position: 0% 50%;
 			    }
 			}
-			@media{
-			    max-width:700px;
+			@media(max-width:700px){
+			    
 			}
 			.c {
 				text-align: right;
